--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Affari Tuoi</title>
+        <link rel="stylesheet" href="style.css">
+        <script defer src="script.js"></script>
     </head>
     <body>
-
     </body>
 </html>
