--- a/index.html
+++ b/index.html
@@ -7,5 +7,48 @@
         <script defer src="script.js"></script>
     </head>
     <body>
+        <header>
+            <h1>Affari Tuoi</h1>
+            <div>
+                <button>STOP</button>
+                <button>START</button>
+            </div>
+        </header>
+    <div class="container">
+        <div class="c1">
+            hi
+        </div>
+        <div class="c2">
+            <div id="grid-container">
+                <!-- Aggiungi i pulsanti da 1 a 20 -->
+                <button class="grid-button" id="n1">1</button>
+                <button class="grid-button" id="n2">2</button>
+                <button class="grid-button" id="n3">3</button>
+                <button class="grid-button" id="n4">4</button>
+                <button class="grid-button" id="n5">5</button>
+                <button class="grid-button" id="n6">6</button>
+                <button class="grid-button" id="n7">7</button>
+                <button class="grid-button" id="n8">8</button>
+                <button class="grid-button" id="n9">9</button>
+                <button class="grid-button" id="n10">10</button>
+                <button class="grid-button" id="n11">11</button>
+                <button class="grid-button" id="n12">12</button>
+                <button class="grid-button" id="n13">13</button>
+                <button class="grid-button" id="n14">14</button>
+                <button class="grid-button" id="n15">15</button>
+                <button class="grid-button" id="n16">16</button>
+                <button class="grid-button" id="n17">17</button>
+                <button class="grid-button" id="n18">18</button>
+                <button class="grid-button" id="n19">19</button>
+                <button class="grid-button" id="n20">20</button>
+            </div>
+            <div class="userButtonContainer">
+                <button class="buttonUser" id="userButton"></button>
+            </div>
+        </div>
+        <div class="c3">
+            bruh
+        </div>
+    </div>
     </body>
 </html>
