Sistemazioni grafice e indentazione codice
Co-Authored-By: Axel Ferrufino <98823712+Axel0203@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
         <header>
             <h1>Affari Tuoi</h1>
             <div>
-                <button>STOP</button>
-                <button>START</button>
+                <button id="start">STOP</button>
+                <button id="stop">START</button>
             </div>
         </header>
     <div class="container">
         <div class="c1">
-            hi
+
         </div>
         <div class="c2">
+            <div class="userButtonContainer">
+                <button class="buttonUser" id="userButton"></button>
+            </div>
+
             <div id="grid-container">
                 <!-- Aggiungi i pulsanti da 1 a 20 -->
                 <button class="grid-button" id="n1">1</button>
@@ -42,12 +46,9 @@
                 <button class="grid-button" id="n19">19</button>
                 <button class="grid-button" id="n20">20</button>
             </div>
-            <div class="userButtonContainer">
-                <button class="buttonUser" id="userButton"></button>
-            </div>
         </div>
         <div class="c3">
-            bruh
+
         </div>
     </div>
     </body>
