--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Affari Tuoi</title>
         <link rel="stylesheet" href="style.css">
         <script defer src="script.js"></script>
+        <script defer src="stampaValori.js"></script>
     </head>
     <body>
         <header>
